<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Order">

    <Button
        android:id="@+id/btn1"
        android:layout_width="122dp"
        android:layout_height="112dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="40dp"
        android:text="@string/item1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="122dp"
        android:layout_height="112dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="40dp"
        android:text="@string/item3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn1" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="122dp"
        android:layout_height="112dp"
        android:layout_marginTop="108dp"
        android:layout_marginEnd="52dp"
        android:text="@string/item2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/btn1"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/OrderText"
        android:textColor="#000000"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.184"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn4"
        android:layout_width="124dp"
        android:layout_height="111dp"
        android:layout_marginTop="40dp"
        android:text="@string/item4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toEndOf="@+id/btn3"
        app:layout_constraintTop_toBottomOf="@+id/btn2" />

    <Button
        android:id="@+id/btn5"
        android:layout_width="125dp"
        android:layout_height="106dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="44dp"
        android:text="@string/item5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn6"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn3"
        app:layout_constraintVertical_bias="0.048" />

    <Button
        android:id="@+id/btn6"
        android:layout_width="125dp"
        android:layout_height="106dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="52dp"
        android:text="@string/item6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn4"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>